--- a/Source/MVVM_UI/SoAEditor/Views/TechniqueView.xaml
+++ b/Source/MVVM_UI/SoAEditor/Views/TechniqueView.xaml
@@ -10,26 +10,80 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="10" />
         </Grid.ColumnDefinitions>
 
         <!-- Row 1 -->
-        <StackPanel Grid.Row="1" Grid.Column="1">
-            <Label Content="This is the technique view."></Label>
+        <!--<Label Grid.Row="1" Grid.Column="1" Content="This is the taxonomy view."/>-->
+
+        <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <Label Content="taxonomy"/>
+            <Label Content="technique" Margin="0,0,0,20"/>
+
+            <DataGrid CanUserAddRows="True" x:Name="InputParams" ItemsSource="{Binding InputParams}" AutoGenerateColumns="False"
+                      CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Input Parameter Ranges" Binding="{Binding Path=Param,UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Min" Binding="{Binding Path=Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Max" Binding="{Binding Path=Optional,UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <!--<Label Content="This is the taxonomy view."/>-->
+            <DataGrid CanUserAddRows="True" x:Name="InputParams2" ItemsSource="{Binding InputParams}" AutoGenerateColumns="False"
+                      CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Input Parameters" Binding="{Binding Path=Param,UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Quantity" Binding="{Binding Path=Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <DataGrid CanUserAddRows="True" x:Name="InputParams3" ItemsSource="{Binding InputParams}" AutoGenerateColumns="False"
+                      CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Outputs" Binding="{Binding Path=Param,UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Min" Binding="{Binding Path=Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Max" Binding="{Binding Path=Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="10"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="10" />
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Row="1" Grid.Column="1" Content="Formulas"/>
+                <Label Grid.Row="1" Grid.Column="2" Content="Variables"/>
+
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="formula text"/>
+
+                <DataGrid Grid.Row="2" Grid.Column="2" CanUserAddRows="True" x:Name="InputParams4" ItemsSource="{Binding InputParams}" AutoGenerateColumns="False"
+                      CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding Path=Param,UpdateSourceTrigger=PropertyChanged}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+            </Grid>
+
+            <Label Content="Documentation"/>
+
         </StackPanel>
 
     </Grid>
 </UserControl>
+
+    
