--- a/Source/MVVM_UI/SoAEditor/Views/CompanyInfoView.xaml
+++ b/Source/MVVM_UI/SoAEditor/Views/CompanyInfoView.xaml
@@ -122,7 +122,7 @@
 
         <!-- Row 5 -->
 
-        <Button x:Name="SaveCompanyInfo" Grid.Row="5" Grid.Column="1" Height="30">Save Company Info</Button>
+        <!--<Button x:Name="SaveCompanyInfo" Grid.Row="5" Grid.Column="1" Height="30">Save Company Info</Button>-->
 
     </Grid>
 </UserControl>
