--- a/Source/MVVM_UI/SoAEditor/Views/RangeView.xaml
+++ b/Source/MVVM_UI/SoAEditor/Views/RangeView.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:local="clr-namespace:SoAEditor.Views"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -23,7 +26,7 @@
         
         
         <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Grid.RowSpan="2">
-            <Label Content="range description" Margin="0,0,0,20"/>
+            <Label x:Name="activeHierarchy" Content="range description" Margin="0,0,0,20"/>
             
                     
             <!--<ListBox x:Name="SubRanges"/>
@@ -37,12 +40,40 @@
             <TextBlock Text="k_nominal * nominal + k_range * range" x:Name="Formula"/>-->
 
             <ScrollViewer  Width="auto" Height="300" ScrollViewer.VerticalScrollBarVisibility="Visible" Foreground="Red">
-                <DataGrid CanUserAddRows="True" x:Name="RangeGrid" ItemsSource="{Binding RangeGrid}" AutoGenerateColumns="true"
-                      CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20" >
+                <DataGrid CanUserAddRows="True" SelectionMode="Extended" 
+                          SelectionUnit="FullRow" x:Name="RangeGrid" 
+                          ItemsSource="{Binding RangeGrid}" AutoGenerateColumns="true"
+                          CanUserDeleteRows="True" CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20"
+                          cal:Message.Attach="[Event SelectionChanged] = [SelectedRowsChangeEvent($executionContext)]">
+                    
+                    <!--<i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseDoubleClick">
+                            <d:ActionMessage MethodName="SelectedRowsChangeEvent">
+                                <d:Parameter Value="$eventArgs" />
+                            </d:ActionMessage>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>-->
+                    
+                    <!--<i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseClick">
+                            <ei:CallMethodAction MethodName="SelectedRowsChangeEvent" TargetObject="{Binding}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>-->
                 </DataGrid>
             </ScrollViewer>
 
             <TextBlock Text="" Margin="0,20,0,20" x:Name="Formula"/>
+
+            <ItemsControl x:Name="ExprVars">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Name}" />
+                            <TextBox Width="100" Text="{Binding Path=Value}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
 
             <StackPanel Orientation="Horizontal">
                 
