--- a/Source/MVVM_UI/SoAEditor/Views/TaxonomyInfoView.xaml
+++ b/Source/MVVM_UI/SoAEditor/Views/TaxonomyInfoView.xaml
@@ -81,11 +81,11 @@
             </DataGrid>
         </StackPanel>
 
-        <Button Height="30" Width="120" Grid.Row="2" Grid.Column="3" Background="AliceBlue">Add Taxonomy</Button>
+        <!--<Button Height="30" Width="120" Grid.Row="2" Grid.Column="3" Background="AliceBlue">Add Taxonomy</Button>-->
 
         <!-- Row 2 - 3 -->
 
-        <Button Height="35" Grid.Row="4" Grid.Column="1" Background="LightBlue">Save Taxonomy Info</Button>
+        <Button Margin="0 20 0 5" Width="100" Height="35" Grid.Row="4" Grid.Column="1" x:Name="okButton">Ok</Button>
 
         <!-- <TextBlock Margin="0 0 0 10" x:Name="SelectedOptionForTaxonomy"></TextBlock> -->
         
